[gd_scene load_steps=12 format=3 uid="uid://djver1s6yd0yu"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_8ib63"]
[ext_resource type="Texture2D" uid="uid://2ox2ugpt4sn8" path="res://Textures/Enemy/kolbold_strong.png" id="2_y3m57"]
[ext_resource type="PackedScene" uid="uid://dxt56k6s6nlte" path="res://Utility/hurt_box.tscn" id="3_3bs1c"]
[ext_resource type="PackedScene" uid="uid://d0fun3gfg66ck" path="res://Utility/hit_box.tscn" id="4_2xlyr"]
[ext_resource type="AudioStream" uid="uid://dqoudi5pkx7nq" path="res://Audio/SoundEffect/enemy_hit.ogg" id="5_k6m4k"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gq50j"]
radius = 9.0
height = 24.0

[sub_resource type="Animation" id="Animation_oe02n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3sn8j"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.2, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_506du"]
_data = {
"RESET": SubResource("Animation_oe02n"),
"walk": SubResource("Animation_3sn8j")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fwe15"]
size = Vector2(19, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5mtnq"]
size = Vector2(11, 19)

[node name="enemy_kobold_strong" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_8ib63")
movement_speed = 50.0
hp = 20
exp = 5
damage = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_y3m57")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2)
shape = SubResource("CapsuleShape2D_gq50j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_506du")
}

[node name="HurtBox" parent="." instance=ExtResource("3_3bs1c")]
collision_layer = 4
collision_mask = 4
HurtBoxType = 1

[node name="DmgLbl" type="Label" parent="HurtBox"]
unique_name_in_owner = true
offset_left = -2.0
offset_top = -17.0
offset_right = 8.0
offset_bottom = 6.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.996078, 0, 0.00392157, 1)
theme_override_font_sizes/font_size = 13

[node name="DmgShowTimer" type="Timer" parent="HurtBox"]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="CollisionShape2D" parent="HurtBox" index="2"]
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_fwe15")

[node name="HitBox" parent="." instance=ExtResource("4_2xlyr")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_5mtnq")

[node name="snd_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_k6m4k")
volume_db = -9.82

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="HurtBox/DmgShowTimer" to="." method="_on_dmg_show_timer_timeout"]

[editable path="HurtBox"]
[editable path="HitBox"]
